codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_empty_then_non_empty_after.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1319
expression: combined
---
• Waited for background terminal · just fix

↳ Interacted with terminal · just fix
  └ ls
