codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_non_empty_then_empty_active.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1345
expression: active_combined
---
↳ Interacted with terminal · just fix
  └ pwd
